# uspas-2026-jupyter

./: .gitignore  Dispersion-Chromaticity-xsuite.ipynb  Dispersion_Chromaticity_Local_Lab_Instructor_Solutions.ipynb  Dispersion_Chromaticity_Local_Lab_Student.ipynb  Longitudinal-Dynamics.ipynb  Quadrupole-Focusing-xsuite.ipynb  Quadrupole-Focusing.ipynb  Quadrupole_Focusing_Xsuite_Instructor_Solutions.ipynb  Quadrupole_Focusing_Xsuite_Student.ipynb  README.md  README_Solutions_Output_Workflow.md  Transverse-Dynamics.ipynb  USPAS-test.ipynb  basic-xsuite-example.ipynb  dc_local_helpers.py  dispersion_chromaticity_exercise_inventory.md  main_ring.madx  matching.ipynb  pyproject.toml  quadrupole_focusing_exercise_inventory.md  quadrupole_focusing_xsuite_helpers.py  requirements-colab.txt  requirements_quadrupole_focusing_xsuite.txt  uspas_xsuite_helpers.py
Solution_Notebook_Workflow_package/: Dispersion_Chromaticity_Local_Lab_Instructor_Solutions.ipynb  Dispersion_Chromaticity_Local_Lab_Student.ipynb  Quadrupole_Focusing_Xsuite_Instructor_Solutions.ipynb  Quadrupole_Focusing_Xsuite_Student.ipynb  README_Solutions_Output_Workflow.md  VERIFICATION_Solutions_Output_Workflow.md  check_student_versions.py  dc_local_helpers.py  dispersion_chromaticity_exercise_inventory.md  make_student_versions.py  quadrupole_focusing_exercise_inventory.md  quadrupole_focusing_xsuite_helpers.py  requirements_dispersion_chromaticity_local.txt
tests/: conftest.py  test_dispersion_chromaticity.py  test_quadrupole_focusing.py  test_shared.py
uspas_labs/: __init__.py  dispersion_chromaticity.py  matching_section_plots.py  quadrupole_focusing.py  shared.py
