[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uspas-2026-jupyter"
version = "0.1.1"
description = "Helper modules for the USPAS 2026 Jupyter/Colab accelerator physics labs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets",
    "numpy",
    "pandas",
    "plotly",
    "scipy",
    "xtrack",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["uspas_labs*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
